<resources>
    <string name="app_name">Qual Combustível</string>
    <string name="answer_ethanol">Abasteça com etanol.</string>
    <string name="answer_gas">Abasteça com gasolina.</string>
    <string name="message_gas">Valor do litro de gasolina:</string>
    <string name="message_ethanol">Valor do litro de etanol:</string>
    <string name="button_text">Qual a melhor opção?</string>
    <string name="message_hint_text">Digite o valor</string>
</resources>
