<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#D3D3D3"
    tools:context="br.edu.ifsp.dmo1.qualcombustvel.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message_gas"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_gasoline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/gasoline"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="16sp"
            android:hint="@string/message_hint_text"
            android:textColorHint="@color/black"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message_ethanol"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_ethanol"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/ethanol"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="16sp"
            android:hint="@string/message_hint_text"
            android:textColorHint="@color/black"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="56dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#7CD330"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="56dp"
            android:text="@string/button_text"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
